--- a/FE/styles/userdetail.css
+++ b/FE/styles/userdetail.css
@@ -105,11 +105,21 @@ header .hright .lg {
   color: #ba131a;
   text-align: center;
   padding: 20px 0px;
+  font-size: 50px;
 }
 
-.container .content h2 {
+.container .content .tdoutput {
+  color: #656566;
+  font-size: 30px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.container .content td {
   color: #012e6f;
-  padding: 30px 0 10px 100px;
+  padding: 40px 0 20px 135px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .container .content .inside {
