--- a/FE/styles/userdetail.scss
+++ b/FE/styles/userdetail.scss
@@ -75,10 +75,19 @@ header {
       color: $primary-color2;
       text-align: center;
       padding: 20px 0px;
+      font-size: 50px;
     }
-    h2{
+    .tdoutput{
+      color: #656566;
+      font-size: 30px;
+      font-weight: normal;
+      font-style: italic;
+    }
+    td{
       color: $primary-color1;
-      padding: 30px 0 10px 100px;
+      padding: 40px 0 20px 135px;
+      font-size: 30px;
+      font-weight: bold;
     }
     .inside{
       height: 800px;
