--- a/FE/styles/manageUser.css
+++ b/FE/styles/manageUser.css
@@ -60,6 +60,29 @@ header .right .lg {
   border-radius: 10px;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ba131a;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
 main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -184,12 +207,12 @@ main .container .content .top form input[type="submit"] {
 
 main .container .content .body {
   width: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  height: 600px;
   border: 4px solid #012e6f;
   border-radius: 24px;
   margin: 20px 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 main .container .content .body .list li {
