--- a/FE/styles/manageUser.scss
+++ b/FE/styles/manageUser.scss
@@ -42,6 +42,27 @@ header {
     }
   }
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary-color2; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
 main {
   flex-grow: 1;
   .container {
@@ -125,10 +146,12 @@ main {
       }
       .body {
         width: 100%;
-        flex-grow: 1;
+        height: 600px;
         border: 4px solid $primary-color1;
         border-radius: 24px;
         margin: 20px 0;
+        overflow-y: auto;
+        overflow-x: hidden;
         .list {
           li {
             font-size: 30px;
