--- a/FE/styles/userdetail.css
+++ b/FE/styles/userdetail.css
@@ -158,5 +158,6 @@ header .hright .lg {
   border: none;
   font-size: 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 /*# sourceMappingURL=userdetail.css.map */
