--- a/FE/styles/userdetail.scss
+++ b/FE/styles/userdetail.scss
@@ -108,6 +108,7 @@ header {
         border: none;
         font-size: 20px;
         font-weight: bold;
+        cursor: pointer;
       }
       
     }
